# Eclair

./: .gitignore  README.md
cmake/: addTest.cmake
lib/: CMakeLists.txt
lib/Eclair/: Eclair.hpp
